[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'spbessax'
description = 'spherical Bessel functions for JAX'
requires-python = '>=3.7'
version = '0.1.4'
license = {file = 'LICENSE.md'}
readme = 'README.md'
dependencies = [
    'jax',
    'numpy',
    ]

keywords = [
    'Spherical Bessel functions',
    'Bessel',
    'JAX',
    ]

    [project.urls]
    Source = 'https://github.com/amimre/spbessax'
    Issues = 'https://github.com/amimre/spbessax/issues'

[project.optional-dependencies]
dev = [
    'pytest',
    'scipy',
    'matplotlib',
    ]
